@@ -7,8 +7,8 @@ import pl.lotto.domain.numberreceiver.dto.TicketDto;
 import pl.lotto.domain.numberreceiver.exceptions.WinningTicketNotFoundException;
 import pl.lotto.domain.numbersgenerator.WinningTicketFacade;
 import pl.lotto.domain.numbersgenerator.dto.WinningTicketResponseDto;
-import pl.lotto.domain.resultchecker.dto.ResultCheckerResponseDto;
-import pl.lotto.domain.resultchecker.exceptions.PlayerResultNotFoundException;
+import pl.lotto.domain.numbersgenerator.exceptions.WinningNumbersNotFoundException;
+import pl.lotto.domain.resultchecker.dto.ResultResponseDto;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -21,11 +21,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-import static pl.lotto.domain.numberreceiver.TicketResultMessage.TICKET_LOSE;
-import static pl.lotto.domain.numberreceiver.TicketResultMessage.TICKET_WIN;
-import static pl.lotto.domain.resultchecker.ResultCheckerFacadeTestConstant.LOSE;
-import static pl.lotto.domain.resultchecker.ResultCheckerMessageProvider.PLAYER_WIN;
-import static pl.lotto.domain.resultchecker.ResultCheckerMessageProvider.WIN;
+import static pl.lotto.domain.resultchecker.ResultCheckerMessageProvider.LOSE;
 
 class ResultsCheckerFacadeTest {
 
@@ -45,7 +41,19 @@ class ResultsCheckerFacadeTest {
         String ticketUUID1 = "550e8125-e29b-41d4-a716-446655440000";
         String ticketUUID2 = "550e8547-e29b-41d4-a716-446655440000";
 
-        when(drawDateFacade.retrieveNextDrawDate()).thenReturn(drawDate);
+        TicketResults ticket1 = TicketResults.builder()
+                .ticketUUID(ticketUUID1)
+                .inputNumbers(Set.of(1, 2, 3, 4, 5, 6))
+                .hitNumbers(Set.of(3, 4))
+                .drawDate(drawDate)
+                .build();
+
+        TicketResults ticket2 = TicketResults.builder()
+                .ticketUUID(ticketUUID2)
+                .inputNumbers(Set.of(1, 2, 3, 4, 5, 6))
+                .hitNumbers(Set.of(3, 4, 5))
+                .drawDate(drawDate)
+                .build();
 
         when(winningTicketFacade.generateWinningTicket()).thenReturn(
                 WinningTicketResponseDto.builder()
@@ -53,35 +61,20 @@ class ResultsCheckerFacadeTest {
                         .winningNumbers(Set.of(3, 4, 5))
                         .drawDate(drawDate)
                         .isWinner(true)
-                        .message(TICKET_WIN.getMessage())
                         .build());
-        when(numberReceiverFacade.retrieveTicketsByDrawDate(drawDate)).thenReturn(
-                List.of(
-                        TicketDto.builder()
-                                .ticketUUID(ticketUUID1)
-                                .inputNumbers(Set.of(1, 2, 3, 4, 5, 6))
-                                .hitNumbers(Set.of(3, 4, 5))
-                                .drawDate(drawDate)
-                                .isWinner(true)
-                                .message(TICKET_WIN.getMessage())
-                                .build(),
-                        TicketDto.builder()
-                                .ticketUUID(ticketUUID2)
-                                .inputNumbers(Set.of(1, 2, 3, 4, 5, 6))
-                                .hitNumbers(Set.of(11, 12, 14))
-                                .drawDate(drawDate)
-                                .isWinner(false)
-                                .message(TICKET_LOSE.getMessage())
-                                .build()
-                ));
+
+        when(resultCheckerRepository.findAllByTicketUUID(ticketUUID1)).thenReturn(List.of(ticket1));
+        when(resultCheckerRepository.findAllByTicketUUID(ticketUUID2)).thenReturn(List.of(ticket2));
+        when(resultCheckerRepository.saveAll(anyList())).thenReturn(List.of(ticket2));
         //when
-        ResultCheckerResponseDto playerResult = resultCheckerFacade.generateResults();
+        ResultResponseDto playerResult = resultCheckerFacade.generateResults();
         //then
+        assertTrue(playerResult.isWinner());
         assertThat(playerResult).isNotNull();
     }
 
     @Test
-    public void should_throwing_player_result_not_found_exception_when_winning_numbers_is_empty() {
+    public void should_throwing_winning_numbers_not_found_when_winning_numbers_is_empty() throws WinningTicketNotFoundException {
         //given
         ResultsCheckerFacade resultCheckerFacade = new ResultsCheckerFacadeConfiguration()
                 .resultsCheckerFacade(numberReceiverFacade, drawDateFacade, winningTicketFacade, resultCheckerRepository);
@@ -94,7 +87,7 @@ class ResultsCheckerFacadeTest {
 
         //when and then
         assertThatThrownBy(resultCheckerFacade::generateResults)
-                .isInstanceOf(PlayerResultNotFoundException.class);
+                .isInstanceOf(WinningNumbersNotFoundException.class);
     }
 
     @Test
@@ -122,160 +115,131 @@ class ResultsCheckerFacadeTest {
 
         LocalDateTime drawDate = LocalDateTime.of(2023, 12, 25, 12, 0, 0);
         String ticketUUID1 = "550e8400-e29b-41d4-a716-446655440000";
-        String ticketUUID2 = "560e8400-e29b-41d4-a716-446655440007";
+        String ticketUUID2 = "648e8400-e29b-41d4-a716-446655440000";
 
-        TicketDto ticket1 = TicketDto.builder()
+        TicketResults ticket1 = TicketResults.builder()
                 .ticketUUID(ticketUUID1)
                 .inputNumbers(Set.of(4, 5, 6, 10, 11, 12))
                 .hitNumbers(Set.of(4, 5, 6, 10))
                 .drawDate(drawDate)
-                .message(TICKET_WIN.getMessage())
                 .build();
 
-        TicketDto ticket2 = TicketDto.builder()
+        TicketResults ticket2 = TicketResults.builder()
                 .ticketUUID(ticketUUID2)
-                .inputNumbers(Set.of(4, 5, 6, 10, 11, 12))
-                .hitNumbers(Set.of(4, 5, 6))
+                .inputNumbers(Set.of(9, 13, 15, 17, 14, 20))
+                .hitNumbers(Set.of(9, 17, 13))
                 .drawDate(drawDate)
-                .message(TICKET_LOSE.getMessage())
                 .build();
 
-        ResultCheckerResponse resultCheckerResponse1 = ResultCheckerResponse.builder()
-                .ticketUUID(ticketUUID1)
-                .inputNumbers(Set.of(4, 5, 6, 10, 11, 12))
-                .hitNumbers(Set.of(4, 5, 6, 10))
-                .drawDate(drawDate)
-                .isWinner(true)
-                .message(WIN)
-                .build();
 
-        ResultCheckerResponse resultCheckerResponse2 = ResultCheckerResponse.builder()
-                .ticketUUID(ticketUUID2)
-                .inputNumbers(Set.of(4, 5, 6, 10, 11, 12))
-                .hitNumbers(Set.of(4, 5, 6))
-                .drawDate(drawDate)
-                .isWinner(false)
-                .build();
+        when(resultCheckerRepository.findAllByTicketUUID(ticketUUID1))
+               .thenReturn(List.of(ticket1));
 
-        when(drawDateFacade.retrieveNextDrawDate()).thenReturn(drawDate);
-
-        when(winningTicketFacade.generateWinningTicket()).thenReturn(
-                WinningTicketResponseDto.builder()
-                        .ticketUUID(ticketUUID1)
-                        .winningNumbers(Set.of(4, 5, 6, 10))
-                        .drawDate(drawDate)
-                        .isWinner(true)
-                        .build());
-
-        when(numberReceiverFacade.retrieveTicketsByDrawDate(drawDate))
-                .thenReturn(List.of(ticket1, ticket2));
-
-        when(resultCheckerRepository.saveAll(anyList())).thenReturn(List.of(resultCheckerResponse1, resultCheckerResponse2));
+        when(resultCheckerRepository.findAllByTicketUUID(ticketUUID2))
+                .thenReturn(List.of(ticket2));
         //when
 
-        ResultDto actualResult = resultCheckerFacade.findResultByTicketUUID(ticketUUID1);
+        ResultResponseDto actualResult = resultCheckerFacade.findResultByTicketUUID(ticketUUID1);
         //then
-        ResultDto expectedResult = ResultDto.builder()
+        ResultResponseDto expectedResult = ResultResponseDto.builder()
                 .ticketUUID(ticketUUID1)
-                .numbers(Set.of(4, 5, 6, 10, 11, 12))
+                .inputNumbers(Set.of(4, 5, 6, 10, 11, 12))
                 .hitNumbers(Set.of(4, 5, 6, 10))
                 .drawDate(drawDate)
-                .isWinner(true)
-                .message(PLAYER_WIN)
                 .build();
+
 
         assertThat(actualResult).isEqualTo(expectedResult);
     }
 
     @Test
-    public void should_return_win_player_when_hit_numbers_are_more_than_three() {
+    public void should_return_win_player_when_hit_numbers_are_three() {
         //given
         ResultsCheckerFacade resultsCheckerFacade = new ResultsCheckerFacadeConfiguration()
                 .resultsCheckerFacade(numberReceiverFacade, drawDateFacade, winningTicketFacade, resultCheckerRepository);
 
-        TicketPlayer ticketPlayer1 = TicketPlayer.builder()
+        TicketDto ticket1 = TicketDto.builder()
                 .ticketUUID("1234")
-                .numbers(Set.of(1, 2, 3, 4, 11, 17, 19))
-                .hitNumbers(Set.of(4, 11, 19))
+                .inputNumbers(Set.of(1, 2, 3, 4, 11, 17, 19))
+                .hitNumbers(Set.of(4, 11))
                 .drawDate(LocalDateTime.of(2023, 12, 25, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer2 = TicketPlayer.builder()
+        TicketDto ticket2 = TicketDto.builder()
                 .ticketUUID("5678")
-                .numbers(Set.of(1, 2, 3, 4, 20, 35, 45))
-                .hitNumbers(Set.of(1, 2))
+                .inputNumbers(Set.of(1, 2, 3, 4, 20, 35, 45))
+                .hitNumbers(Set.of(1))
                 .drawDate(LocalDateTime.of(2023, 12, 25, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer3 = TicketPlayer.builder()
+        TicketDto ticket3 = TicketDto.builder()
                 .ticketUUID("9844")
-                .numbers(Set.of(1, 2, 3, 4, 20, 35, 45))
-                .hitNumbers(Set.of(20, 35, 45, 2))
-                .isWinner(true)
-                .message(TICKET_WIN.getMessage())
+                .inputNumbers(Set.of(1, 2, 3, 4, 20, 35, 45))
+                .hitNumbers(Set.of(20, 35, 45))
                 .drawDate(LocalDateTime.of(2023, 12, 25, 12, 0, 0))
+                .isWinner(true)
                 .build();
 
-        List<TicketPlayer> allTicketsByDate = List.of(ticketPlayer1, ticketPlayer2, ticketPlayer3);
+        List<TicketDto> tickets = List.of(ticket1, ticket2, ticket3);
         Set<Integer> winningNumbers = Set.of(20, 35, 45, 2);
 
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
+        List<ResultResponseDto> results = winnersRetriever.retrieveWinners(tickets, winningNumbers);
 
-        ResultCheckerResponse resultCheckerResponse1 = resultCheckerResponses.get(0);
-        ResultCheckerResponse resultCheckerResponse2 = resultCheckerResponses.get(1);
-        ResultCheckerResponse resultCheckerResponse3 = resultCheckerResponses.get(2);
+        ResultResponseDto resultCheckerResponse1 = results.get(0);
+        ResultResponseDto resultCheckerResponse2 = results.get(1);
+        ResultResponseDto resultCheckerResponse3 = results.get(2);
+
         //then
-        assertEquals(3, resultCheckerResponses.size());
+        assertEquals(3, results.size());
         assertFalse(resultCheckerResponse1.isWinner());
         assertFalse(resultCheckerResponse2.isWinner());
         assertTrue(resultCheckerResponse3.isWinner());
     }
 
     @Test
-    public void should_return_not_win_player_when_hit_numbers_are_less_than_three() {
+    public void should_return_not_win_players_when_hit_numbers_are_less_than_three() {
         //given
         ResultsCheckerFacade resultsCheckerFacade = new ResultsCheckerFacadeConfiguration()
                 .resultsCheckerFacade(numberReceiverFacade, drawDateFacade, winningTicketFacade, resultCheckerRepository);
 
-        TicketPlayer ticketPlayer1 = TicketPlayer.builder()
+        TicketDto ticket1 = TicketDto.builder()
                 .ticketUUID("1234")
-                .numbers(Set.of(1, 2, 9, 10, 11, 17, 19))
+                .inputNumbers(Set.of(1, 2, 9, 10, 11, 17, 19))
+                .hitNumbers(Set.of(1,2))
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer2 = TicketPlayer.builder()
+        TicketDto ticket2 = TicketDto.builder()
                 .ticketUUID("5678")
-                .numbers(Set.of(1, 3, 22, 8, 20, 35, 45))
+                .inputNumbers(Set.of(1, 3, 22, 8, 20, 35, 45))
+                .hitNumbers(Set.of(8,20))
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer3 = TicketPlayer.builder()
+        TicketDto ticket3 = TicketDto.builder()
                 .ticketUUID("1111")
-                .numbers(Set.of(1, 6, 14, 20, 90, 30, 8))
+                .inputNumbers(Set.of(1, 6, 14, 20, 90, 30, 8))
+                .hitNumbers(Set.of(6))
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        List<TicketPlayer> allTicketsByDate = List.of(ticketPlayer1, ticketPlayer2, ticketPlayer3);
+        List<TicketDto> allTicketsByDate = List.of(ticket1, ticket2, ticket3);
         Set<Integer> winningNumbers = Set.of(1, 2, 3, 4, 5, 6, 7);
 
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
+        List<ResultResponseDto> results = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
 
-        ResultCheckerResponse resultCheckerResponse1 = resultCheckerResponses.get(0);
-        ResultCheckerResponse resultCheckerResponse2 = resultCheckerResponses.get(1);
-        ResultCheckerResponse resultCheckerResponse3 = resultCheckerResponses.get(2);
+        ResultResponseDto result1 = results.get(0);
+        ResultResponseDto result2 = results.get(1);
+        ResultResponseDto result3 = results.get(2);
         //then
-        assertThat(resultCheckerResponses).isNotNull();
-        assertFalse(resultCheckerResponse1.isWinner());
-        assertFalse(resultCheckerResponse2.isWinner());
-        assertFalse(resultCheckerResponse3.isWinner());
-
-        assertThat(resultCheckerResponse1.hitNumbers().size()).isEqualTo(2);
-        assertThat(resultCheckerResponse2.hitNumbers().size()).isEqualTo(2);
-        assertThat(resultCheckerResponse3.hitNumbers().size()).isEqualTo(2);
+        assertThat(results).isNotNull();
+        assertFalse(result1.isWinner());
+        assertFalse(result2.isWinner());
+        assertFalse(result3.isWinner());
     }
 
     @Test
@@ -284,90 +248,87 @@ class ResultsCheckerFacadeTest {
         ResultsCheckerFacade resultsCheckerFacade = new ResultsCheckerFacadeConfiguration()
                 .resultsCheckerFacade(numberReceiverFacade, drawDateFacade, winningTicketFacade, resultCheckerRepository);
 
-        TicketPlayer ticketPlayer1 = TicketPlayer.builder()
+        TicketDto ticket1 = TicketDto.builder()
                 .ticketUUID("1234")
-                .numbers(Set.of(22, 45, 9, 10, 11, 17, 19))
+                .inputNumbers(Set.of(22, 45, 9, 10, 11, 17, 19))
+                .hitNumbers(Collections.emptySet())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer2 = TicketPlayer.builder()
+        TicketDto ticket2 = TicketDto.builder()
                 .ticketUUID("5678")
-                .numbers(Set.of(40, 17, 22, 12, 20, 35, 45))
+                .inputNumbers(Set.of(40, 17, 22, 12, 20, 35, 45))
+                .hitNumbers(Collections.emptySet())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer3 = TicketPlayer.builder()
+        TicketDto ticket3 = TicketDto.builder()
                 .ticketUUID("1111")
-                .numbers(Set.of(60, 45, 14, 20, 90, 30, 8))
+                .inputNumbers(Set.of(60, 45, 14, 20, 90, 30, 8))
+                .hitNumbers(Collections.emptySet())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        List<TicketPlayer> allTicketsByDate = List.of(ticketPlayer1, ticketPlayer2, ticketPlayer3);
+        List<TicketDto> allTicketsByDate = List.of(ticket1, ticket2, ticket3);
         Set<Integer> winningNumbers = Set.of(1, 2, 3, 4, 5, 6, 7);
 
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
+        List<ResultResponseDto> results = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
 
-        ResultCheckerResponse resultCheckerResponse1 = resultCheckerResponses.get(0);
-        ResultCheckerResponse resultCheckerResponse2 = resultCheckerResponses.get(1);
-        ResultCheckerResponse resultCheckerResponse3 = resultCheckerResponses.get(2);
+        ResultResponseDto result1 = results.get(0);
+        ResultResponseDto resul2 = results.get(1);
+        ResultResponseDto result3 = results.get(2);
         //then
-        assertThat(resultCheckerResponses).isNotNull();
-        assertFalse(resultCheckerResponse1.isWinner());
-        assertFalse(resultCheckerResponse2.isWinner());
-        assertFalse(resultCheckerResponse3.isWinner());
-
-        assertThat(resultCheckerResponse1.hitNumbers().size()).isEqualTo(0);
-        assertThat(resultCheckerResponse2.hitNumbers().size()).isEqualTo(0);
-        assertThat(resultCheckerResponse3.hitNumbers().size()).isEqualTo(0);
+        assertThat(results).isNotNull();
+        assertFalse(result1.isWinner());
+        assertFalse(resul2.isWinner());
+        assertFalse(result3.isWinner());
     }
 
     @Test
-    public void should_return_not_win_player_when_input_numbers_are_empty() {
+    public void should_return_not_win_players_when_input_numbers_are_empty() {
         //given
         ResultsCheckerFacade resultsCheckerFacade = new ResultsCheckerFacadeConfiguration()
                 .resultsCheckerFacade(numberReceiverFacade, drawDateFacade, winningTicketFacade, resultCheckerRepository);
 
-        TicketPlayer ticketPlayer1 = TicketPlayer.builder()
+        TicketDto ticket1 = TicketDto.builder()
                 .ticketUUID("1234")
-                .numbers(Set.of())
+                .inputNumbers(Set.of())
+                .hitNumbers(Set.of())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer2 = TicketPlayer.builder()
+        TicketDto ticket2 = TicketDto.builder()
                 .ticketUUID("5678")
-                .numbers(Set.of())
+                .inputNumbers(Set.of())
+                .hitNumbers(Set.of())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        TicketPlayer ticketPlayer3 = TicketPlayer.builder()
+        TicketDto ticket3 = TicketDto.builder()
                 .ticketUUID("1111")
-                .numbers(Set.of())
+                .inputNumbers(Set.of())
+                .hitNumbers(Set.of())
                 .drawDate(LocalDateTime.of(2022, 4, 8, 12, 0, 0))
                 .build();
 
-        List<TicketPlayer> allTicketsByDate = List.of(ticketPlayer1, ticketPlayer2, ticketPlayer3);
+        List<TicketDto> allTicketsByDate = List.of(ticket1, ticket2, ticket3);
         Set<Integer> winningNumbers = Set.of(1, 2, 3, 4, 5, 6, 7);
 
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
+        List<ResultResponseDto> results = winnersRetriever.retrieveWinners(allTicketsByDate, winningNumbers);
 
-        ResultCheckerResponse resultCheckerResponse1 = resultCheckerResponses.get(0);
-        ResultCheckerResponse resultCheckerResponse2 = resultCheckerResponses.get(1);
-        ResultCheckerResponse resultCheckerResponse3 = resultCheckerResponses.get(2);
+        ResultResponseDto result1 = results.get(0);
+        ResultResponseDto result2 = results.get(1);
+        ResultResponseDto result3 = results.get(2);
         //then
-        assertThat(resultCheckerResponses).isNotNull();
-        assertFalse(resultCheckerResponse1.isWinner());
-        assertFalse(resultCheckerResponse2.isWinner());
-        assertFalse(resultCheckerResponse3.isWinner());
-
-        assertThat(resultCheckerResponse1.hitNumbers().size()).isEqualTo(0);
-        assertThat(resultCheckerResponse2.hitNumbers().size()).isEqualTo(0);
-        assertThat(resultCheckerResponse3.hitNumbers().size()).isEqualTo(0);
+        assertThat(results).isNotNull();
+        assertFalse(result1.isWinner());
+        assertFalse(result2.isWinner());
+        assertFalse(result3.isWinner());
     }
-
     @Test
     public void should_return_empty_players_when_tickets_is_empty() {
         //given
@@ -377,9 +338,9 @@ class ResultsCheckerFacadeTest {
         Set<Integer> winningNumbers = Set.of(1, 2, 3, 4, 5, 6, 7);
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(Collections.emptyList(), winningNumbers);
+        List<ResultResponseDto> results = winnersRetriever.retrieveWinners(Collections.emptyList(), winningNumbers);
         //then
-        assertTrue(resultCheckerResponses.isEmpty());
+        assertTrue(results.isEmpty());
     }
 
     @Test
@@ -391,7 +352,7 @@ class ResultsCheckerFacadeTest {
         //when
         WinnersRetriever winnersRetriever = resultsCheckerFacade.winnersRetriever();
 
-        List<ResultCheckerResponse> resultCheckerResponses = winnersRetriever.retrieveWinners(Collections.emptyList(), null);
+        List<ResultResponseDto> resultCheckerResponses = winnersRetriever.retrieveWinners(Collections.emptyList(), null);
         //then
         assertThat(resultCheckerResponses).isNullOrEmpty();
     }
